[metadata]
name = SerpentAI
version = 2020.2.1
description = Game Agent Development Kit. Helping you create AIs / Bots that learn to play any game you own!
readme = README.md
authors = 
    Nicholas Brochu <nicholas@serpent.ai>
    research2use <research2use@hotmail.com>
license = MIT
homepage = https://serpent.ai
repository = https://github.com/SerpentAI/SerpentAI
documentation = https://github.com/SerpentAI/SerpentAI/wiki
keywords = 
    AI
    Artificial Intelligence
    Machine Learning
    Reinforcement Learning
    Games
classifiers =
    Development Status :: 5 - Production/Stable,
    Environment :: GPU :: NVIDIA CUDA,
    Intended Audience :: Developers,
    Intended Audience :: Science/Research,
    Natural Language :: English,
    License :: OSI Approved :: MIT License,
    Operating System :: Microsoft :: Windows,
    Operating System :: Unix,
    Programming Language :: Python,
    Programming Language :: Python :: 3.6,
    Topic :: Software Development :: Libraries :: Application Frameworks,
    Topic :: Scientific/Engineering :: Artificial Intelligence,
    Topic :: Games/Entertainment

[options]
python_requires = ==3.6.*
packages = find:
install_requires =
    offshoot
    redis
    aioredis
    mss
    PyAutoGUI
    pywin32
    sneakysnek
    autobahn==21.2.1
    twisted==20.3.0
    crossbar==20.4.2 # 18.12.1 does not work, needs patch 2cf72756b6f974fc892f7ca029e0624999922aa6
    editdistance
    
[options.extras_require]
    gui = Kivy ==2.0.0

[options.entry_points]
console_scripts =
    serpent = serpent.serpent:execute
